CHATS_SIT/force-app/main/default/objects/sfsit_t_provr_notes_hist__x.object
<CustomObject>
    <description>sfsit$t_provr_notes_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_provr_notes_hist</externalName>
    <fields>
        <fullName>cde_type_notes__c</fullName>
        <description>cde_type_notes</description>
        <externalDeveloperName>cde_type_notes</externalDeveloperName>
        <label>Type note code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>effective begin date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>last modified date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_created__c</fullName>
        <description>dte_created</description>
        <externalDeveloperName>dte_created</externalDeveloperName>
        <label>created date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>effective end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>id_service__c</fullName>
        <description>id_service</description>
        <externalDeveloperName>id_service</externalDeveloperName>
        <label>Service ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_notes__c</fullName>
        <description>idn_notes</description>
        <externalDeveloperName>idn_notes</externalDeveloperName>
        <label>note id</label>
        <length>50</length>
        <referenceTargetField>T_PROVR_NOTES__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_PROVR_NOTES__c</referenceTo>
        <relationshipLabel>Provider Notes Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_provr_notes_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_notes_hist__c</fullName>
        <description>idn_notes_hist</description>
        <externalDeveloperName>idn_notes_hist</externalDeveloperName>
        <label>note history id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>last modified by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_provr_notes_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_flag__c</fullName>
        <description>ind_flag</description>
        <externalDeveloperName>ind_flag</externalDeveloperName>
        <label>flad indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nam_by_notes__c</fullName>
        <description>nam_by_notes</description>
        <externalDeveloperName>nam_by_notes</externalDeveloperName>
        <label>notes changed by</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt_desc_notes__c</fullName>
        <description>txt_desc_notes</description>
        <externalDeveloperName>txt_desc_notes</externalDeveloperName>
        <label>notes description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>txt_subject__c</fullName>
        <description>txt_subject</description>
        <externalDeveloperName>txt_subject</externalDeveloperName>
        <label>subject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Provider Notes History</label>
    <pluralLabel>Provider Notes History</pluralLabel>
</CustomObject>